import java.util.ArrayList;

public class SaveOrOpen {
    //This class file will either populate the list view with all lists from a given file
    //or it will save the selected lists to a txt file
    public void openFile(){
        //create a new file chooser to open the file
        //set the title to "Choose your lists file"
        //create an extension filter to only open a .txt
        //populate the listview with the contents of the file
    }

    public void saveFile(ArrayList<String> save){
        //create a new file chooser to save the file
        //set the title to "Save your lists file as"
        //create an extension filter to only save as .txt
        //using the arraylist taken in, organize and save the file to txt
    }
}
