@startuml

class SaveOrOpen{
    +saveFile()
    +openFile()
}

class Main{
    +start()
    +main()
}

class Application{
    +addaList()
    +delaList()
    +exitTheProgram()
    +loadList()
    +saveList()
    +showAllItems()
    +showCompletedItems()
    +showIncompletedItems()
    +showItemsOfList(ActionEvent event)
}


Main -- Application

Application -- SaveOrOpen
@enduml